--- a/wiki/OMUsage.wiki
+++ b/wiki/OMUsage.wiki
@@ -2,10 +2,10 @@
 
 = Introduction =
 
-OpenMalaria is a simulator designed to model the cost and effectiveness of interventions against the _plasmodium falciparum_ malaria parasite. These simulations can be run on both a [http://malariacontrol.net/ large] and small (PC) scale.
+OpenMalari    a is a simulator designed to model the cost and effectiveness of interventions against the _plasmodium falciparum_ malaria parasite. These simulations can be run on both a [http://malariacontrol.net/ large] and small (PC) scale.
 
 Documented here:
 
  * [SetupOverview Installing] OpenMalaria and using it to run some example scenarios
  * How to [ScenarioDesign design and configure] scenarios
- * Some info on analysing results
+ * Some information how to analyze results
