--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -4,17 +4,17 @@
 
 The simulator itself can be:
 
-  * [openmalariaTools installed and used with OpenMalariaTools] (easiest to use)
-  * [BuildSystem compiled from source]
+  * [openmalariaTools installed and used with a graphical user interface - OpenMalariaTools] 
+  * [BuildSystem compiled from source and run via command line on individual pc's]
   * run over BOINC ([http://malariacontrol.net/ join our volunteer computing effort])
 
-We can also make packages with just the OpenMalaria simulator and few examples available for win32/OS X/linux 32/64-bit platforms. Please ask if none of the links above provide what you need (because you're using a Mac or need a newer version).
+We can, upon request, create packages with just the OpenMalaria simulator and few examples available for win32/OS X/linux 32/64-bit platforms. Please ask if none of the links above provide what you need (because you're using a Mac or need a newer version).
 
 == Troubleshooting ==
 
-Note that, for windows, you may well have to install the .net framework (if trying to run OpenMalaria as above gives you an error message like "reinstall the application", try this). You can download this from the [http://www.microsoft.com/net/ Microsoft .net page].
+Note that, for windows, you may well have to install the .net framework (if trying to run OpenMalaria as above gives you an error message such as "reinstall the application", try this). Microsoft .net can be downloaded from the [http://www.microsoft.com/net/ Microsoft website].
 
-If this doesn't help, please contact us (or better, open an [http://code.google.com/p/openmalaria/issues/list issue]) with the error message.
+Still have problems?, send us an e-mail, or open an [http://code.google.com/p/openmalaria/issues/list issue]) containing the error message.
 
 
 = Experiment creator =
