Edited wiki page Binaries through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2289 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -2,8 +2,9 @@
 
 = OpenMalaria simulator =
 
-The simulator itself can be:
+The simulator can be:
 
+  * installed and used with a graphical user interface [openmalariaTools  - OpenMalariaTools] 
   * [openmalariaTools installed and used with a graphical user interface - OpenMalariaTools] 
   * [BuildSystem compiled from source and run via command line on individual pc's]
   * run over BOINC ([http://malariacontrol.net/ join our volunteer computing effort])
