--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -4,18 +4,18 @@
 
 The simulator can be:
 
-  * installed and used with a graphical user interface [openmalariaTools  - OpenMalariaTools] 
-  * [openmalariaTools installed and used with a graphical user interface - OpenMalariaTools] 
-  * [BuildSystem compiled from source and run via command line on individual pc's]
-  * run over BOINC ([http://malariacontrol.net/ join our volunteer computing effort])
+  * installed and used with a graphical user interface, see [openmalariaTools  - OpenMalariaTools]  
+  * complied from source and run via command line, see [BuildSystem BuildSystem]
+  * run over the BOINC volunteer computing network, see ([http://malariacontrol.net/  malariacontrol.net ] 
+ 
 
-We can, upon request, create packages with just the OpenMalaria simulator and a few examples for win32/OS X/linux 32/64-bit platforms. Please ask if none of the links above provide what you need.
+We can, upon request, create packages with binaries of the OpenMalaria simulator and a few examples for win32/OS X/linux 32/64-bit platforms. Mac users are invited to follow the build instructions for their OS. Please ask if none of the links above provide what you need.
 
 == Troubleshooting ==
 
-Note that, for windows, you may well have to install the .net framework (if trying to run OpenMalaria as above gives you an error message such as "reinstall the application", try this). Microsoft .net can be downloaded from the [http://www.microsoft.com/net/ Microsoft website].
+Note that, for Windows, the Microsoft .net framework is a prerequisite. You can you download .net from [http://www.microsoft.com/net/ Microsoft].
 
-Still have problems? We want to know! Send us an e-mail, or open an [http://code.google.com/p/openmalaria/issues/list issue]) containing the error message.
+Still have problems? We want to know! Send us an e-mail, or, better yet open an [http://code.google.com/p/openmalaria/issues/list issue]). However you contact us, please include a copy of the error message that is generated. 
 
 
 = Experiment creator =
