--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -6,7 +6,7 @@ The simulator can be:
 
   * installed and used with a graphical user interface, see [openmalariaTools  - OpenMalariaTools]  
   * complied from source and run via command line, see [BuildSystem BuildSystem]
-  * run over the BOINC volunteer computing network, see ([http://malariacontrol.net/  malariacontrol.net ] 
+  * run over the BOINC volunteer computing network, see [http://malariacontrol.net/  malariacontrol.net ] 
  
 
 We can, upon request, create packages with binaries of the OpenMalaria simulator and a few examples for win32/OS X/linux 32/64-bit platforms. Mac users are invited to follow the build instructions for their OS. Please ask if none of the links above provide what you need.
