--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -15,7 +15,7 @@ We can, upon request, create packages with binaries of the OpenMalaria simulator
 
 Note that, for Windows, the Microsoft .net framework is a prerequisite. You can you download .net from [http://www.microsoft.com/net/ Microsoft].
 
-Still have problems? We want to know! Send us an e-mail, or, better yet open an [http://code.google.com/p/openmalaria/issues/list issue]). However you contact us, please include a copy of the error message that is generated. 
+Still have problems? We want to know! Send us an e-mail, or, better yet open an [http://code.google.com/p/openmalaria/issues/list issue]. However you contact us, please include a copy of the error message that is generated. 
 
 
 = Experiment creator =
