--- a/wiki/SetupOverview.wiki
+++ b/wiki/SetupOverview.wiki
@@ -1,6 +1,6 @@
 #summary Overview of building and installation methods
 
-= Participation in the volunteer computing effort
+= Participation in the volunteer computing effort =
 
 If you want to help the project by offering down-time on your computer to run simulations, join our project at: [http://www.malariacontrol.net malariacontrol.net]
 
@@ -9,8 +9,8 @@ If you want to help the project by offering down-time on your computer to run si
 See also the [Binaries] page for information on installing OpenMalaria.
 
 If you want to run your own simulations, you have the following options:
-  * install the compiled tool with GUI [OpenMalariaTools]  
-  * build the openmalaria program from [BuildSystem source]
+  * install the compiled tool with GUI [openmalariaTools OpenMalariaTools]  
+  * build the openmalaria executable from [BuildSystem source]
 
 = Running =
 
@@ -18,7 +18,7 @@ If you want to run your own simulations, you have the following options:
 
 = Tools =
 
-You may also want to install some extra programs, particularly on Windows, to aid reading/editing input and output files.
+You may also want to install some extra programs, particularly on Windows, to aid editing input and output files.
 
   * [UtilsWindows Windows] — a convenient text editor, and archive tool
   * MacOSX — handles archives fine but not necessarily XML files; dashcode (presumably part of [http://developer.apple.com/tools/xcode/ xcode]) can edit XML files but struggles with scripts, or you can [http://www.google.com/search?q=macosx+text+editor search for one]
